[gd_scene load_steps=7 format=3 uid="uid://v352y6e4p5g1"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_hx6b8"]
[ext_resource type="FontFile" uid="uid://b0fj14w6xvshv" path="res://Assets/fonts/PixelOperator8.ttf" id="2_il3yk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_g1qqw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2okxt"]
bg_color = Color(0.753986, 0.753983, 0.753984, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3udt0"]
bg_color = Color(0.548964, 0.548962, 0.548963, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_k1cas"]
bg_color = Color(0.899259, 0.899258, 0.899258, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hx6b8")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -239.0
offset_top = -126.5
offset_right = 239.0
offset_bottom = 126.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="NewGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_il3yk")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_g1qqw")
theme_override_styles/hover = SubResource("StyleBoxFlat_2okxt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3udt0")
theme_override_styles/normal = SubResource("StyleBoxFlat_k1cas")
action_mode = 0
text = "New Game"

[node name="LoadGameButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_il3yk")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_g1qqw")
theme_override_styles/hover = SubResource("StyleBoxFlat_2okxt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3udt0")
theme_override_styles/normal = SubResource("StyleBoxFlat_k1cas")
action_mode = 0
text = "Load Game"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_il3yk")
theme_override_font_sizes/font_size = 48
theme_override_styles/focus = SubResource("StyleBoxEmpty_g1qqw")
theme_override_styles/hover = SubResource("StyleBoxFlat_2okxt")
theme_override_styles/pressed = SubResource("StyleBoxFlat_3udt0")
theme_override_styles/normal = SubResource("StyleBoxFlat_k1cas")
action_mode = 0
text = "Exit"

[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
